add styling to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
-  <nav>
-    <%= link_to "Home", root_path %>
-    <%= link_to "Create Items", new_item_path %>
-    <%= link_to "Sign Up", root_path %>
-    <%= link_to "Log In", root_path %>
+  <nav class="right">
+    <%= link_to "Home", root_path, class: "btn btn-primary" %>
+    <%= link_to "Add Items", new_item_path, class: "btn btn-primary" %>
+    <%= link_to "Sign Up", root_path, class: "btn btn-primary" %>
+    <%= link_to "Log In", root_path, class: "btn btn-primary" %>
   </nav>
 </header>
