--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="right">
     <%= link_to "Home", root_path, class: "btn btn-primary" %>
     <%= link_to "Add Items", new_item_path, class: "btn btn-primary" %>
-    <%= link_to "Sign Up", root_path, class: "btn btn-primary" %>
+    <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
     <%= link_to "Log In", root_path, class: "btn btn-primary" %>
   </nav>
 </header>
