--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,7 +1,7 @@
 <h1>Log In</h1>
 
 <%= form_for @user, url: {action: "auth"} do |f| %>
-  Name: <%= f.text_field :name %><br>
-  Email: <%= f.text_field :email %><br>
+  <%= f.text_field :email, placeholder: "email" %><br>
+  <%= f.password_field :password, placeholder: "password" %><br>
   <%= f.submit "Submit", class: "btn btn-info" %>
 <% end %>
