--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,12 @@
 <header>
   <nav class="right">
-    <%= link_to "Home", root_path, class: "btn btn-primary" %>
+    <%= link_to "To Do List", root_path, class: "btn btn-primary" %>
     <%= link_to "Add Items", new_item_path, class: "btn btn-primary" %>
-    <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
-    <%= link_to "Log In", login_path, class: "btn btn-primary" %>
+    <% if logged_in? %>
+      <%= link_to "Log Out", root_path, class: "btn btn-primary" %>
+    <% else %>
+      <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
+      <%= link_to "Log In", login_path, class: "btn btn-primary" %>
+    <% end %>
   </nav>
 </header>
