--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,3 @@
 <h1>Create New Todo Item</h1>
 
-<%= form_for @item do |f|%>
-  <%= f.text_field :text %>
-  <%= f.submit "Submit" %>
-<% end %>
+  <%= render "form" %>
