allow users to delete items from list

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
   <% @items.each do |item|%>
-    <li><%= item.text %> <%= link_to "Edit", edit_item_path(item) %></li>
+    <li><%= item.text %> <%= link_to "Edit", edit_item_path(item) %> <%= link_to "Delete", item_path(item), method: "delete" %></li>
   <% end %>
 </ol>
