--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
       <%= link_to "To Do List", root_path, class: "btn btn-primary" %>
       <%= link_to "Log Out", logout_path, method: "delete", class: "btn btn-primary" %>
     <% else %>
-      <a href="/login" class= "fancybox", data-fancybox-type= "iframe" >Log In</a>
+      <a href="/login" class= "btn btn-primary fancybox", data-fancybox-type= "iframe">Log In</a>
+      <a href="/users/new" class="btn btn-primary fancybox", data-fancybox-type= "iframe" >Sign Up</a>
     <% end %>
   </nav>
 </header>
