--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
   <h1>Log In</h1>
 
-  <%= form_for @user, url: {action: "auth"} do |f| %>
+  <%= form_for @user, html: {class: 'fancybox-form'}, url: {action: "auth"} do |f| %>
     <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.password_field :password, placeholder: "password" %><br>
     <%= f.submit "Submit", class: "btn btn-info" %>
