--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Todo List</h1>
 
-<p><%= link_to "Add New Task", new_item_path, class: "btn btn-primary" %></p>
+<p><%= link_to "Add New Task", new_task_path, class: "btn btn-primary" %></p>
 
 <ol>
   <% if @tasks.empty? %>
