--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,6 @@
     <%= f.text_field :name, placeholder: "name" %><br>
     <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.password_field :password, placeholder: "password" %><br>
-    <%= f.submit "Submit", class: "btn btn-info" %>
+    <%= f.submit "Submit", class: "btn btn-secondary" %>
   <% end %>
 </div>
