--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 /*
- *= require_tree .
+ * require_tree .
  *= require fancybox
  *= require_self
  */
 
 @import "bootstrap";
+@import "main";
+@import "header";
