--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,6 +4,6 @@
   <%= form_for @user, html: {class: 'fancybox-form'}, url: {action: "auth"} do |f| %>
     <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.password_field :password, placeholder: "password" %><br>
-    <%= f.submit "Submit", class: "btn btn-info" %>
+    <%= f.submit "Submit", class: "btn btn-secondary" %>
   <% end %>
 </div>
