--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="icon"> Pomodoro ToDo
+  <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="icon"> <span class="title">Pomodoro ToDo</span>
   <nav class="right">
     <% if user_signed_in? %>
       <%= link_to "To Do List", root_path, class: "btn btn-primary" %>
