--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Todo List</h2>
 
-<p><%= link_to "Add New Task", new_task_path, class: "btn btn-primary" %></p>
+<p><%= link_to "Add New Task", new_task_path, class: "btn btn-secondary" %></p>
 
 <ol>
   <% if @tasks.empty? %>
