--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for @task do |f|%>
   <%= f.text_field :text %>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit", class: "btn btn-secondary" %>
 <% end %>
