--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -1,6 +1,11 @@
-<h3>Start Timer</h3>
-<%= form_for @timer, :url => task_timers_path(@task) do |f|%>
-  <%= f.text_field :length, placeholder: "length of time" %><br>
-  <%= f.hidden_field :task_id, value: @task.id %>
-  <%= f.submit "Submit", class: "btn btn-info" %>
-<% end %>
+<div class="clock-info">
+  <h3>Start Timer</h3>
+  <%= form_for @timer, :url => task_timers_path(@task), :html => {:class => "start"} do |f|%>
+    <%= f.text_field :length, placeholder: "length of time" %><br>
+    <%= f.hidden_field :task_id, value: @task.id %>
+    <%= f.submit "Submit", class: "btn btn-info" %>
+  <% end %>
+</div>
+
+<div class="clock">
+</div>
