add basic styling to clock

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 /*
- * require_tree .
  *= require fancybox
  *= require_self
  */
@@ -7,3 +6,4 @@
 @import "bootstrap";
 @import "main";
 @import "header";
+@import "timer";
