add additional info to timer

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -20,7 +20,7 @@ html, body {
 }
 
 main {
-  padding: 5em;
+  padding: 2em 5em;
 }
 
 a {
@@ -52,7 +52,7 @@ a:hover {
   font-weight: bold;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: #00b359;
   font-family: 'Gloria Hallelujah', cursive;
 }
