--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -1,11 +1,11 @@
-<div class="clock">
-</div>
-
 <div class="clock-info">
   <h3>Start Timer</h3>
   <%= form_for @timer, :url => task_timers_path(@task), :html => {:class => "start"} do |f|%>
-    <%= f.text_field :length, placeholder: "length of time" %><br>
-    <%= f.hidden_field :task_id, value: @task.id %>
+    <%= f.text_field :length, id: "length", placeholder: "length of time" %><br>
+    <%= f.hidden_field :text, id: "text", value: @task.text %>
     <%= f.submit "Submit", class: "btn btn-info" %>
   <% end %>
+</div>
+
+<div class="clock">
 </div>
