--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -31,7 +31,7 @@ a:hover {
   text-decoration: none;
 }
 
-.btn-primary {
+.btn-primary, .btn-primary:hover {
   border: 4px solid #e94734;
   background: #FFF;
   color: #e94734;
@@ -39,11 +39,6 @@ a:hover {
   border-radius: 4.5em;
 }
 
-.btn-primary:hover {
-  border: 4px solid #e94734;
-  background: #f2f2f2;
-  color: #e94734;
-}
 
 .btn-secondary, .btn-secondary:hover {
   border: none;
