change font sizes

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,12 +2,16 @@ header {
   padding: 2em 2em 0 2em;
 }
 
-.icon {
+.avatar {
   width: 4em;
+}
+
+.icon {
+  width: 0.8em;
 }
 
 .title {
   font-family: 'Lobster', cursive;
   color: #00b359;
-  font-size: 2em;
+  font-size: 1.6em;
 }
