--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,7 @@
-<h2>Todo List</h2>
-
 <p>Add New Task: <%= render "form" %></p>
 
-<ol>
+<h2>Todo List</h2>
+<ol class="list">
   <% if @tasks.empty? %>
     <p>
       You currently don't have anything in your todo list.<br>
