--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,9 +12,7 @@
       <%= task.text %>
       <%= link_to image_tag("edit-icon.png", class: "icon", alt: "Edit", title: "Delete"), edit_task_path(task) %>
       <%= link_to image_tag("delete-icon.png", class: "icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete" %>
-      <ul>
-        <li><%= link_to "Start Timer", new_task_timer_path(task) %></li>
-      </ul>
+      <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_timer_path(task) %>
     </li>
   <% end %>
 </ol>
