add banner to welcome page

--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,12 +1,15 @@
-<div class="center">
-  <p>Welcome to the Pomodoro Todo List. This todo list utilizes the <a href="http://pomodorotechnique.com/" target="_blank">Pomodoro technique</a>, a time management system meant to be both productive and fun.</p>
+<div class="center welcome-banner">
 </div>
-<h3>How it works</h3>
-<ul>
-  <li>Decide on the task to be done</li>
-  <li>Set a timer to 25 minutes</li>
-  <li>Work on the task until the timer rings. If a distraction pops into your head, write it down, but immediately get back on task.</li>
-  <li>After the timer rings, put a checkmark on a piece of paper.</li>
-  <li>If you have fewer than four checkmarks, take a short break (3–5 minutes), then go to step 1.</li>
-  <li>After four pomodoros, take a longer break (15–30 minutes), reset your checkmark count to zero, then go to step 1.</li>
-</ul>
+<main>
+  <p class="center welcome-message">Welcome to the Pomodoro Todo List.<br>
+  This todo list utilizes the <a href="http://pomodorotechnique.com/" target="_blank">Pomodoro technique</a>, a time management system meant to be both productive and fun.</p>
+  <h3>How it works</h3>
+  <ul>
+    <li>Decide on the task to be done</li>
+    <li>Set a timer to 25 minutes</li>
+    <li>Work on the task until the timer rings. If a distraction pops into your head, write it down, but immediately get back on task.</li>
+    <li>After the timer rings, put a checkmark on a piece of paper.</li>
+    <li>If you have fewer than four checkmarks, take a short break (3–5 minutes), then go to step 1.</li>
+    <li>After four pomodoros, take a longer break (15–30 minutes), reset your checkmark count to zero, then go to step 1.</li>
+  </ul>
+</main>
