--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,18 +1,20 @@
-<h2>Todo List</h2>
-<ol class="list">
-  <%= render "form" %>
-  <% if @tasks.empty? %>
-    <p>
-      You currently don't have anything in your todo list.<br>
-      Start striking out your tasks and goals today!
-    </p>
-  <% end %>
-  <% @tasks.each do |task|%>
-    <li>
-      <%= task.text %>
-      <%= link_to image_tag("edit-icon.png", class: "icon", alt: "Edit", title: "Delete"), edit_task_path(task) %>
-      <%= link_to image_tag("delete-icon.png", class: "icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete" %>
-      <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_timer_path(task) %>
-    </li>
-  <% end %>
-</ol>
+<main>
+  <h2>Todo List</h2>
+  <ol class="list">
+    <%= render "form" %>
+    <% if @tasks.empty? %>
+      <p>
+        You currently don't have anything in your todo list.<br>
+        Start striking out your tasks and goals today!
+      </p>
+    <% end %>
+    <% @tasks.each do |task|%>
+      <li>
+        <%= task.text %>
+        <%= link_to image_tag("edit-icon.png", class: "icon", alt: "Edit", title: "Delete"), edit_task_path(task) %>
+        <%= link_to image_tag("delete-icon.png", class: "icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete" %>
+        <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_timer_path(task) %>
+      </li>
+    <% end %>
+  </ol>
+</main>
