--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -8,6 +8,8 @@
     <% end %>
   </div>
 
+  <%= image_tag("pomodoro-timer.png", class: "clock-bg") %>
+
   <div class="clock">
     <span class="minutes"></span>:<span class="seconds"></span>
   </div>
