--- a/app/assets/stylesheets/timer.scss
+++ b/app/assets/stylesheets/timer.scss
@@ -2,7 +2,7 @@
   width: 40%;
   background: #FFF;
   text-align: center;
-  margin: auto;
+  margin: 0.4em auto 0;
   font-size: 4em;
   font-weight: bold;
   display: none;
@@ -11,7 +11,7 @@
 
 .clock-bg {
   position: absolute;
-  top: 9.8em;
+  top: 11em;
   left: 13.5em;
   width: 6em;
   display: none;
