--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
         <%= task.text %>
         <%= link_to image_tag("edit-icon.png", class: "icon", alt: "Edit", title: "Delete"), edit_task_path(task) %>
         <%= link_to image_tag("delete-icon.png", class: "icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete" %>
-        <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_timer_path(task) %>
+        <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_pomodoro_path(task) %>
       </li>
     <% end %>
   </ol>
