add additional styling to welcome page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,10 @@
-<% if !current_page?(new_user_path) && !current_page?(login_path)%>
+<% if user_signed_in? %>
   <header>
     <a href=<%= root_path %>>
-      <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="avatar"> <span class="title">Pomodoro ToDo</span>
+      <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="logo"> <span class="title">Pomodoro ToDo</span>
     </a>
     <nav class="right">
-      <% if user_signed_in? %>
-        <%= link_to "Log Out", logout_path, method: "delete", class: "btn btn-primary" %>
-      <% else %>
-        <a href="/login" class= "btn btn-primary fancybox", data-fancybox-type= "iframe">Log In</a>
-        <a href="/users/new" class="btn btn-primary fancybox", data-fancybox-type= "iframe" >Sign Up</a>
-      <% end %>
+      <%= link_to "Log Out", logout_path, method: "delete", class: "btn btn-primary" %>
     </nav>
   </header>
 <% end %>
