--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,7 @@
+.welcome-logo {
+  margin-top: 1em;
+}
+
 .welcome-banner {
   width: 100%;
   background-image: url("pomodoro-bg.jpg");
@@ -10,10 +14,20 @@
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
+  margin: 1em 0;
 }
 
 .welcome-message {
   position: absolute;
   top: 8em;
   color: #f1e7e2;
+  padding: 0 5em 2em;
+
+  a {
+    color: #00b359;
+  }
+}
+
+.register-user {
+  margin-bottom: 2em;
 }
