--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,9 +1,23 @@
-<div class="center welcome-banner">
+<div class="center welcome-logo">
+  <a href=<%= root_path %>>
+    <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="logo"> <span class="title">Pomodoro ToDo</span>
+  </a>
 </div>
+
+<div class="welcome-banner">
+</div>
+<p class="center welcome-message">
+  Welcome to the Pomodoro Todo List.<br>
+  This todo list utilizes the <a href="http://pomodorotechnique.com/" target="_blank">Pomodoro technique</a>, a time management system meant to be both productive and fun.
+</p>
+
+<div class="center register-user">
+  <a href="/login" class= "btn btn-primary fancybox", data-fancybox-type= "iframe">Log In</a>
+  <a href="/users/new" class="btn btn-primary fancybox", data-fancybox-type= "iframe" >Sign Up</a>
+</div>
+
 <main>
-  <p class="center welcome-message">Welcome to the Pomodoro Todo List.<br>
-  This todo list utilizes the <a href="http://pomodorotechnique.com/" target="_blank">Pomodoro technique</a>, a time management system meant to be both productive and fun.</p>
-  <h3>How it works</h3>
+  <h3 class="center">How it works</h3>
   <ul>
     <li>Decide on the task to be done</li>
     <li>Set a timer to 25 minutes</li>
