--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -19,11 +19,13 @@
 <main>
   <h3 class="center">How it works</h3>
   <ul>
-    <li>Decide on the task to be done</li>
-    <li>Set a timer to 25 minutes</li>
-    <li>Work on the task until the timer rings. If a distraction pops into your head, write it down, but immediately get back on task.</li>
-    <li>After the timer rings, put a checkmark on a piece of paper.</li>
-    <li>If you have fewer than four checkmarks, take a short break (3–5 minutes), then go to step 1.</li>
-    <li>After four pomodoros, take a longer break (15–30 minutes), reset your checkmark count to zero, then go to step 1.</li>
+    <li>Choose a task to work on.</li>
+    <li>Set timer for 25 minutes.</li>
+    <li>Work on task until timer rings.</li>
+    <li>Avoid distractions; if necessary, write them down, but continue working afterwards.</li>
+    <li>You gain a pomodoro after the timer rings.</li>
+    <li>If you have fewer than 4 pomodoros, take a short break (3–5 minutes).</li>
+    <li>After 4 pomodoros, take a longer break (15–30 minutes) and reset pomodoro count.</li>
+    <li>After each break, start again from step 1.</li>
   </ul>
 </main>
