save logo to assets

--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,7 +1,5 @@
 <div class="center welcome-logo">
-  <a href=<%= root_path %>>
-    <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="logo"> <span class="title">Pomodoro ToDo</span>
-  </a>
+  <%= link_to image_tag("logo.png", class: "logo", title: "Pomodoro ToDo"), root_path %> <span class="title">Pomodoro ToDo</span>
 </div>
 
 <div class="welcome-banner">
