--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,6 @@
 <% if user_signed_in? %>
   <header>
-    <a href=<%= root_path %>>
-      <img src="http://a4.mzstatic.com/us/r30/Purple1/v4/8a/3a/1f/8a3a1f6c-ebc6-4bbd-bc61-bf27aed94494/icon128-2x.png" class="logo"> <span class="title">Pomodoro ToDo</span>
-    </a>
+    <%= link_to image_tag("logo.png", class: "logo", title: "Pomodoro ToDo"), root_path %> <span class="title">Pomodoro ToDo</span>
     <nav class="right">
       <%= link_to "Log Out", logout_path, method: "delete", class: "btn btn-primary" %>
     </nav>
