--- a/app/views/pomodoros/new.html.erb
+++ b/app/views/pomodoros/new.html.erb
@@ -1,8 +1,9 @@
 <main>
   <div class="clock-info">
     <h3>Start Timer</h3>
-    <%= form_for @pomodoro, :url => task_pomodoros_path(@task), :html => {:class => "start"} do |f|%>
+    <%= form_for @pomodoro, url: task_pomodoros_path(@task), :html => {id: "start"} do |f|%>
       <%= f.text_field :length, id: "length", placeholder: "length of time" %><br>
+      <%= f.hidden_field :task_id, value: @task.id %><br>
       <%= f.hidden_field :text, id: "text", value: @task.text %>
       <%= f.submit "Submit", class: "btn btn-info" %>
     <% end %>
