let user know when they have 4 or more pomodoros

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,8 @@
 <main>
+  <% if Pomodoro.count >= 4 %>
+    <p>It's time for a break!</p>
+    <p>Click here to reset you're pomodoro count.</p>
+  <% end %>
   <h2>Todo List</h2>
   <ol class="list">
     <div id="add-task">
