--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,6 +15,7 @@
         Start striking out your tasks and goals today!
       </p>
     <% end %>
+
     <% @tasks.each do |task|%>
       <li>
         <div class="task-form">
@@ -23,7 +24,7 @@
         <div class="task">
           <%= task.text %>
           <%= link_to image_tag("edit-icon.png", class: "edit-task icon", alt: "Edit", title: "Delete"), edit_task_path(task) %>
-          <%= link_to image_tag("delete-icon.png", class: "delete-task icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete" %>
+          <%= link_to image_tag("delete-icon.png", class: "delete-task icon", alt: "Delete", title: "Delete"), task_path(task), method: "delete", data: { confirm: "Are you sure?" } %>
           <%= link_to image_tag("timer-icon.png", class: "icon", alt: "Timer", title: "Start Timer"), new_task_pomodoro_path(task) %>
           <% task.pomodoros.each do |pomodoro|%>
             <% if pomodoro.user == current_user %>
