--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,8 @@ html, body {
   margin: 0;
   height: 100%;
   background: #f1e7e2;
+  background-image: url("beige-bg.jpg");
+  background-size: cover;
   font-family: 'Alice', serif;
   font-size: 1.3em;
 }
