add notebook bg to list

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,8 @@
     <p>It's time for a break!</p>
   <% end %>
   <h2>Todo List</h2>
-  <ol class="list">
+  <div class="list">
+    <ol>
     <div id="add-task">
       <%= render "form" %>
     </div>
