--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,9 @@
 .list {
   border-left: 5px solid #83df6d;
-  margin: 0 0 0 2em;
+  margin-bottom: 2em;
+  padding: 3.5em 2em 2em 6.5em;
+  background-image: url("notebook-bg.jpg");
+  background-size: cover;
 }
 
 .task-form, .task-options {
