--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <main>
-  <h3 class="center">How it works</h3>
+  <h3>How it works</h3>
   <ul>
     <li>Choose a task to work on.</li>
     <li>Set timer for 25 minutes.</li>
