--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -14,7 +14,7 @@
   <a href="/users/new" class="btn btn-primary fancybox", data-fancybox-type= "iframe" >Sign Up</a>
 </div>
 
-<main>
+<main class="instructions">
   <h3>How it works</h3>
   <ul>
     <li>Choose a task to work on.</li>
