style break notification

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,3 +8,10 @@
 .task-form, .task-options {
   display: none;
 }
+
+.break-notification {
+  padding: 0.5em;
+  background: #83df6d;
+  text-align: center;
+  color: #FFF;
+}
