--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -50,6 +50,12 @@ a, a:hover {
   font-size: 0.6em;
 }
 
+.btn-alert, .btn-alert:hover {
+  background: #000;
+  color: #FFF;
+  font-size: 1em;
+}
+
 h1, h2, h3, h4 {
   color: #00b359;
   font-family: 'Gloria Hallelujah', cursive;
