--- a/app/views/pomodoros/new.html.erb
+++ b/app/views/pomodoros/new.html.erb
@@ -2,11 +2,11 @@
   <div class="center clock-info">
     <p>Enter how many minutes to set timer for. The default is 25 minutes, however you can enter a minimum of 10 and a max of 59 minutes.</p>
     <h3>Start Timer</h3>
-    <%= form_for @pomodoro, url: task_pomodoros_path(@task), :html => {id: "start"} do |f|%>
+    <%= form_for @pomodoro, url: task_pomodoros_path(@task), :html => {id: "start-task"} do |f|%>
       <%= f.text_field :length, id: "length", placeholder: "minutes" %><br>
       <%= f.hidden_field :task_id, value: @task.id %><br>
       <%= f.hidden_field :text, id: "text", value: @task.text %>
-      <%= f.submit "Submit", class: "btn btn-info" %>
+      <%= f.submit "Submit", class: "btn btn-secondary" %>
     <% end %>
   </div>
 
