add sweetAlert gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 /*
- *= require fancybox
- *= require_self
- */
+*= require fancybox
+*= require sweet-alert
+*= require_self
+*/
 
 @import "bootstrap";
 @import "main";
