center login and signup forms

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,6 +1,5 @@
-<div class="center">
-  <h1>Log In</h1>
-
+<div class="center register-user">
+  <h3>Log In</h3>
   <%= form_for @user, html: {class: 'fancybox-form'}, url: {action: "auth"} do |f| %>
     <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.password_field :password, placeholder: "password" %><br>
