--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="center register-user">
   <h3>Sign Up</h3>
   <%= form_for @user, html: {class: 'fancybox-form'} do |f|%>
     <%= f.text_field :name, placeholder: "name" %><br>
