--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -9,7 +9,7 @@
   This todo list utilizes the <a href="http://pomodorotechnique.com/" target="_blank">Pomodoro technique</a>, a time management system meant to be both productive and fun.
 </p>
 
-<div class="center register-user">
+<div class="center register-menu">
   <a href="/login" class= "btn btn-primary fancybox", data-fancybox-type= "iframe">Log In</a>
   <a href="/users/new" class="btn btn-primary fancybox", data-fancybox-type= "iframe" >Sign Up</a>
 </div>
