--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,7 @@
 
 .welcome-banner {
   width: 100%;
-  background-image: url("pomodoro-bg.jpg");
+  background: image-url("pomodoro-bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   padding: 4em;
