--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <main>
   <% if Pomodoro.count >= 4 %>
-    <div class="break-notification">
+    <div class="notification">
       <h3 class="center">Good work!</h3>
       <p>You now have four or more pomodoros and it's time to take a break!<br>
         Click below to begin a 15 minute timer and reset your pomodoro count.<br>
