add error handling for break timers

--- a/app/views/pomodoros/reset.html.erb
+++ b/app/views/pomodoros/reset.html.erb
@@ -1,5 +1,7 @@
 <main>
   <div class="center clock-info">
+    <div id="errors">
+    </div>
     <p>Enter how many minutes to set timer for.<br>
       Breaks are usually 15 to 30 minutes.</p>
     <h3>Start Timer</h3>
