fix bug in error handling sign ups

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <h3>Sign Up</h3>
-  <%= form_for @user, html: {class: 'fancybox-form'} do |f|%>
+  <%= form_for @user, html: {class: 'fancybox-form'}, url: {action: "register"} do |f|%>
     <%= f.text_field :name, placeholder: "name" %><br>
     <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.password_field :password, placeholder: "password" %><br>
