create shared directory for shared partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-  <%= render "layouts/header" %>
+  <%= render "shared/header" %>
   <%= yield %>
-  <%= render "layouts/footer" %>
+  <%= render "shared/footer" %>
 </body>
 </html>
