--- a/app/views/pomodoros/new.html.erb
+++ b/app/views/pomodoros/new.html.erb
@@ -1,6 +1,6 @@
 <main>
   <div id="errors">
-    <%= render "layouts/error" %>
+    <%= render "shared/error" %>
   </div>
 
   <div class="center clock-info">
