--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 
   <div id="errors">
-    <%= render "layouts/error" %>
+    <%= render "shared/error" %>
   </div>
 
   <p>*Hover over a task to edit, delete, or start a timer.</p>
