--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,6 +1,6 @@
 <div class="center register-user">
   <div id="errors">
-    <%= render "layouts/error" %>
+    <%= render "shared/error" %>
   </div>
 
   <h3>Log In</h3>
