add angular.js to index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Lobster|Gloria+Hallelujah|Alice' rel='stylesheet' type='text/css'>
 </head>
-<body>
-
+<body ng-app="myApp">
   <%= render "shared/header" %>
   <%= yield %>
   <%= render "shared/footer" %>
